<resources>
    <string name="app_name">Instrat</string>
    <string name="page_login_title">Instrat</string>
    <string name="page_login_username_hint">Username</string>
    <string name="page_login_password_hint">Password</string>
    <string name="page_login_button_text">Login</string>
    <string name="page_main_button_send">Kirim</string>
    <string name="page_main_button_new">Buat Survey</string>
    <string name="page_loginprog_title">Logging In</string>
    <string name="title_surveyaction_list">SurveyActions</string>
    <string name="title_surveyaction_detail">SurveyAction Detail</string>
    <string name="alfanumerik">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890, </string>
    <string name="page_blok0_tipe_survey_text">Tipe Survey</string>
    <string-array name="page_blok0_tipe_survey_list">
        <item>--Pilih Jawaban--</item>
        <item>Full Audit Smartphone</item>
        <item>Full Audit Modem</item>
        <item>Listing</item>
        <item>Advocacy Harga</item>
    </string-array>
    <string name="page_blok3_q6_text">Pilih Scenario Advocacy</string>
    <string name="page_blok3_q6_a1_text">SKENARIO ADVOCACY 1 (Harga dibawah Rp 500 ribu dan Rp 500 ribu-1 juta)</string>
    <string name="page_blok3_q6_a2_text">SKENARIO ADVOCACY 2 (Harga Rp 1-1.5 juta dan Rp 1.5-2 juta)</string>
    <string name="page_blok3_q6_a3_text">SKENARIO ADVOCACY 3 (Harga 2-3 juta dan Modem)</string>
    <string-array name="page_blok3_phone_lower500_list">
        <item>--Pilih Jawaban--</item>
        <item>Smartfren</item>
        <item>Samsung</item>
        <item>Advan</item>
        <item>Asiafone</item>
        <item>Asus</item>
        <item>Axioo</item>
        <item>Blackberry</item>
        <item>Evercoss / Cross</item>
        <item>Huawei</item>
        <item>IMO</item>
        <item>Lenovo</item>
        <item>LG</item>
        <item>Maxtron</item>
        <item>Mito</item>
        <item>Nokia / Microsoft</item>
        <item>Pixcom</item>
        <item>Polytron</item>
        <item>SPC</item>
        <item>Venera</item>
        <item>Xiaomi</item>
        <item>ZTE</item>
        <item>Zyrex</item>
        <item>Tidak Tahu</item>
        <item>Tidak Ada</item>
        <item>Lainnya</item>
    </string-array>
    <string-array name="page_blok3_phone_500to1000k_list">
        <item>--Pilih Jawaban--</item>
        <item>Smartfren</item>
        <item>Samsung</item>
        <item>Advan</item>
        <item>Asiafone</item>
        <item>Asus</item>
        <item>Axioo</item>
        <item>Blackberry</item>
        <item>Evercoss / Cross</item>
        <item>Huawei</item>
        <item>IMO</item>
        <item>Lenovo</item>
        <item>LG</item>
        <item>Maxtron</item>
        <item>Mito</item>
        <item>Nokia / Microsoft</item>
        <item>Pixcom</item>
        <item>Polytron</item>
        <item>SPC</item>
        <item>Venera</item>
        <item>Xiaomi</item>
        <item>ZTE</item>
        <item>Zyrex</item>
        <item>Tidak Tahu</item>
        <item>Tidak Ada</item>
        <item>Lainnya</item>
    </string-array>
    <string-array name="page_blok3_phone_1000to1500k_list">
        <item>--Pilih Jawaban--</item>
        <item>Smartfren</item>
        <item>Samsung</item>
        <item>Acer</item>
        <item>Advan</item>
        <item>Asiafone</item>
        <item>Asus</item>
        <item>Axioo</item>
        <item>Blackberry</item>
        <item>Evercoss / Cross</item>
        <item>Huawei</item>
        <item>IMO</item>
        <item>Lenovo</item>
        <item>LG</item>
        <item>Maxtron</item>
        <item>Mito</item>
        <item>Nokia / Microsoft</item>
        <item>Oppo</item>
        <item>Pixcom</item>
        <item>Polytron</item>
        <item>Sony</item>
        <item>SPC</item>
        <item>Venera</item>
        <item>Xiaomi</item>
        <item>ZTE</item>
        <item>Zyrex</item>
        <item>Tidak Tahu</item>
        <item>Tidak Ada</item>
        <item>Lainnya</item>
    </string-array>
    <string-array name="page_blok3_phone_1500to2000k_list">
        <item>--Pilih Jawaban--</item>
        <item>Smartfren</item>
        <item>Samsung</item>
        <item>Acer</item>
        <item>Advan</item>
        <item>Asiafone</item>
        <item>Asus</item>
        <item>Axioo</item>
        <item>Blackberry</item>
        <item>Evercoss / Cross</item>
        <item>Huawei</item>
        <item>IMO</item>
        <item>Lenovo</item>
        <item>LG</item>
        <item>Maxtron</item>
        <item>Mito</item>
        <item>Nokia / Microsoft</item>
        <item>Oppo</item>
        <item>Pixcom</item>
        <item>Polytron</item>
        <item>Sony</item>
        <item>SPC</item>
        <item>Venera</item>
        <item>Xiaomi</item>
        <item>ZTE</item>
        <item>Zyrex</item>
        <item>Tidak Tahu</item>
        <item>Tidak Ada</item>
        <item>Lainnya</item>
    </string-array>
    <string name="page_checkbox_smartfren_text">Smartfren</string>
    <string name="page_checkbox_asus_text">Asus</string>
    <string name="page_checkbox_blackberry_text">Blackberry</string>
    <string name="page_checkbox_evercoss_text">Evercoss / Cross</string>
    <string name="page_checkbox_lenovo_text">Lenovo</string>
    <string name="page_checkbox_mito_text">Mito</string>
    <string name="page_checkbox_nokia_text">Nokia / Microsoft</string>
    <string name="page_checkbox_oppo_text">Oppo</string>
    <string name="page_checkbox_samsung_text">Samsung</string>
    <string name="page_checkbox_sony_text">Sony</string>
    <string name="page_checkbox_tidakada_text">Tidak Ada</string>
    <string name="page_checkbox_lainnya_text">Lainnya</string>
    <string name="page_checkbox_blok5_q53_a1_text">Harga jualnya tidak stabil</string>
    <string name="page_checkbox_blok5_q53_a2_text">Salesnya tidak enak diajak negosiasi</string>
    <string name="page_checkbox_blok5_q53_a3_text">Sering Rugi</string>
    <string name="page_checkbox_blok5_q53_a4_text">Pembelinya kurang</string>
    <string name="page_checkbox_blok5_q53_a5_text">Cari produknya sulit</string>
    <string name="page_checkbox_blok5_q53_a6_text">Produknya sering di komplain konsumen</string>
    <string name="page_checkbox_blok5_q53_a7_text">Insentifnya kurang menarik</string>
    <string name="page_checkbox_blok5_q53_a8_text">Produknya tidak tahan lama (cepat rusak)</string>
    <string name="page_checkbox_blok5_q53_a9_text">Baterainya cepat rusak</string>
    <string name="page_checkbox_blok5_q53_a10_text">Lainnya, sebutkan</string>
    <string name="page_blok5_q48_text">Apakah produk-produk smartfren Andromax Q 4G berikut TERLIHAT di toko ini? (PILIH HANYA 1 JAWABAN)</string>
    <string name="page_blok5_q49_text">Apakah produk-produk smartfren Andromax Qi 4G berikut TERLIHAT di toko ini? (PILIH HANYA 1 JAWABAN)</string>
    <string name="page_blok5_q50_text">Apakah produk-produk smartfren Andromax R 4G berikut TERLIHAT di toko ini? (PILIH HANYA 1 JAWABAN)</string>
    <string name="page_blok5_q51_text">Apakah produk-produk smartfren Andromax Ec 4G berikut TERLIHAT di toko ini? (PILIH HANYA 1 JAWABAN)</string>
    <string name="page_blok5_q52_text">Apakah produk-produk smartfren Andromax Es 4G berikut TERLIHAT di toko ini? (PILIH HANYA 1 JAWABAN)</string>
    <string name="page_blok5_q52B_text">Apakah produk-produk smartfren Andromax E2 4G berikut TERLIHAT di toko ini? (PILIH HANYA 1 JAWABAN)</string>
    <string name="page_blok5_q52C_text">Apakah produk-produk smartfren Andromax R2 4G berikut TERLIHAT di toko ini? (PILIH HANYA 1 JAWABAN)</string>
    <string name="page_blok5_q52D_text">Apakah produk-produk smartfren Andromax E2+ 4G berikut TERLIHAT di toko ini? (PILIH HANYA 1 JAWABAN)</string>
    <string name="page_blok5_q52E_text">Apakah produk-produk smartfren Andromax A 4G berikut TERLIHAT di toko ini? (PILIH HANYA 1 JAWABAN)</string>
    <string name="page_blok5_q53_text">Mengapa tidak ada stock Smartfren Andromax 4G ? (BISA LEBIH DARI 1 JAWABAN)</string>
    <string name="page_blok5_q54_text">CATAT BILA TERLIHAT Smartfren Smartphone MODEL LAMA (PILIH HANYA 1 JAWABAN)</string>
    <string name="page_blok5_q55_text">CATAT BILA TERLIHAT Ecosystem Smartfren Smartphone (PILIH HANYA 1 JAWABAN)</string>
    <string name="page_blok5_q56_text">CATAT MEREKNYA Bila ada Produk Demo Smartphone (produk yang bisa ditest/coba) (BISA LEBIH DARI 1 JAWABAN)</string>
    <string name="page_checkbox_blok7_supplier_distributor_lenovo_text">Distributor LENOVO</string>
    <string name="page_checkbox_blok7_supplier_wholesaler_text">Wholesaler</string>
    <string name="page_checkbox_blok7_supplier_bandar_text">Bandar</string>
    <string name="page_checkbox_blok7_supplier_toko_lain_text">Toko lain di mall ini</string>
    <string name="page_checkbox_blok7_supplier_mall_lain_text">Toko di mall lain</string>
    <string name="page_checkbox_blok7_alasan_ragu_1_text">Harga jualnya stabil</string>
    <string name="page_checkbox_blok7_alasan_ragu_2_text">Salesnya enak negosiasinya</string>
    <string name="page_checkbox_blok7_alasan_ragu_3_text">Untungnya lumayan</string>
    <string name="page_checkbox_blok7_alasan_ragu_4_text">Pembelinya cukup banyak</string>
    <string name="page_checkbox_blok7_alasan_ragu_5_text">Cari produknya mudah</string>
    <string name="page_checkbox_blok7_alasan_ragu_6_text">Produknya jarang di komplain konsumen</string>
    <string name="page_checkbox_blok7_alasan_ragu_7_text">Insentifnya menarik</string>
    <string name="page_checkbox_blok7_alasan_ragu_8_text">Harga jualnya tidak stabil</string>
    <string name="page_checkbox_blok7_alasan_ragu_9_text">Salesnya tidak enak negosiasinya</string>
    <string name="page_checkbox_blok7_alasan_ragu_10_text">Sering rugi</string>
    <string name="page_checkbox_blok7_alasan_ragu_11_text">Pembelinya kurang</string>
    <string name="page_checkbox_blok7_alasan_ragu_12_text">Cari produknya sulit</string>
    <string name="page_checkbox_blok7_alasan_ragu_13_text">Produknya sering di komplain konsumen</string>
    <string name="page_checkbox_blok7_alasan_ragu_14_text">Insentifnya kurang menarik</string>
    <string name="page_checkbox_blok7_alasan_ragu_15_text">Lainnya, Sebutkan</string>
    <string name="page_blok7_q112_text">Anda order LENOVO paling sering ke siapa ? (BISA LEBIH DARI 1 JAWABAN)</string>
    <string name="page_blok7_q113_text">Apakah Anda akan order merek LENOVO lagi dalam sebulan mendatang ? (PILIH HANYA 1 JAWABAN)</string>
    <string name="page_blok7_q114_text">Mengapa Anda mengatakan ... (jawaban sebelumnya) untuk merek LENOVO? (BISA LEBIH DARI 1 JAWABAN)</string>
    <string name="page_checkbox_blok10_produkjual_1_text">Smartphone Baru / New</string>
    <string name="page_checkbox_blok10_produkjual_2_text">Smartphone Bekas / Second</string>
    <string name="page_checkbox_blok10_produkjual_3_text">Modem (USB)+C872+C38</string>
    <string name="page_checkbox_blok10_produkjual_4_text">New Feature Phone / HP biasa</string>
    <string name="page_checkbox_blok10_produkjual_5_text">HP Biasa Bekas</string>
    <string name="page_checkbox_blok10_produkjual_6_text">Kartu Perdana / Kartu Voucher / Voucher Elektrik</string>
    <string name="page_checkbox_blok10_produkjual_7_text">Aksesoris Handphone</string>
    <string name="page_checkbox_blok10_produkjual_8_text">Komputer / laptop</string>
    <string name="page_checkbox_blok10_produkjual_9_text">Game (konsol PS, Xbox, Nintendo dll)</string>
    <string name="page_checkbox_blok10_produkjual_10_text">Printer / fax / alat elektronik lainnya</string>
    <string name="page_checkbox_blok10_produkjual_11_text">Services HP tidak resmi</string>
    <string name="page_checkbox_blok10_produkjual_12_text">Service HP resmi</string>
    <string name="page_blok10_q129_text">CATAT jenis barang / jasa yang dijual di toko ini? (BISA LEBIH DARI 1 JAWABAN)</string>
</resources>