<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smartfren.instrat.activities.Blok7DActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/txtBlock7DTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="20dp"
                android:text="BLOK 7D : PENGALAMAN MENJUAL LENOVO (INTERVIEW PEMILIK TOKO)"
                android:gravity="center_horizontal"/>

            <TextView
                style="@style/LabelQuestion"
                android:id="@+id/lblQ112"
                android:text="@string/page_blok7_q112_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ112A1"
                android:text="@string/page_checkbox_blok7_supplier_distributor_lenovo_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ112A2"
                android:text="@string/page_checkbox_blok7_supplier_wholesaler_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ112A3"
                android:text="@string/page_checkbox_blok7_supplier_bandar_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ112A4"
                android:text="@string/page_checkbox_blok7_supplier_toko_lain_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ112A5"
                android:text="@string/page_checkbox_blok7_supplier_mall_lain_text"/>
            <TextView
                style="@style/LabelError"
                android:id="@+id/errorQ112A"/>

            <TextView
                style="@style/LabelQuestion"
                android:id="@+id/lblQ113"
                android:text="@string/page_blok7_q113_text"/>
            <Spinner
                style="@style/Answer"
                android:id="@+id/spQ113A"/>
            <TextView
                style="@style/LabelError"
                android:id="@+id/errorQ113A"/>

            <TextView
                style="@style/LabelQuestion"
                android:id="@+id/lblQ114"
                android:text="@string/page_blok7_q114_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ114A1"
                android:text="@string/page_checkbox_blok7_alasan_ragu_1_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ114A2"
                android:text="@string/page_checkbox_blok7_alasan_ragu_2_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ114A3"
                android:text="@string/page_checkbox_blok7_alasan_ragu_3_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ114A4"
                android:text="@string/page_checkbox_blok7_alasan_ragu_4_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ114A5"
                android:text="@string/page_checkbox_blok7_alasan_ragu_5_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ114A6"
                android:text="@string/page_checkbox_blok7_alasan_ragu_6_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ114A7"
                android:text="@string/page_checkbox_blok7_alasan_ragu_7_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ114A8"
                android:text="@string/page_checkbox_blok7_alasan_ragu_8_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ114A9"
                android:text="@string/page_checkbox_blok7_alasan_ragu_9_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ114A10"
                android:text="@string/page_checkbox_blok7_alasan_ragu_10_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ114A11"
                android:text="@string/page_checkbox_blok7_alasan_ragu_11_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ114A12"
                android:text="@string/page_checkbox_blok7_alasan_ragu_12_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ114A13"
                android:text="@string/page_checkbox_blok7_alasan_ragu_13_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ114A14"
                android:text="@string/page_checkbox_blok7_alasan_ragu_14_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ114A15"
                android:text="@string/page_checkbox_blok7_alasan_ragu_15_text"/>
            <EditText
                style="@style/Answer"
                android:id="@+id/txtQ114A"/>
            <TextView
                style="@style/LabelError"
                android:id="@+id/errorQ114A"/>
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/bottom_step_button_layout" />
</RelativeLayout>
