<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smartfren.instrat.activities.Blok5AActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/txtBlock5ATitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="20dp"
                android:text="BLOK 5A : VISIBILITY AND AVAILABILITY SMARTPHONE SMARTFREN"
                android:gravity="center_horizontal"/>

            <TextView
                style="@style/LabelQuestion"
                android:id="@+id/lblQ48"
                android:text="@string/page_blok5_q48_text"/>
            <Spinner
                style="@style/Answer"
                android:id="@+id/spQ48A"/>
            <TextView
                style="@style/LabelError"
                android:id="@+id/errorQ48A"/>

            <TextView
                style="@style/LabelQuestion"
                android:id="@+id/lblQ49"
                android:text="@string/page_blok5_q49_text"/>
            <Spinner
                style="@style/Answer"
                android:id="@+id/spQ49A"/>
            <TextView
                style="@style/LabelError"
                android:id="@+id/errorQ49A"/>

            <TextView
                style="@style/LabelQuestion"
                android:id="@+id/lblQ50"
                android:text="@string/page_blok5_q50_text"/>
            <Spinner
                style="@style/Answer"
                android:id="@+id/spQ50A"/>
            <TextView
                style="@style/LabelError"
                android:id="@+id/errorQ50A"/>

            <TextView
                style="@style/LabelQuestion"
                android:id="@+id/lblQ51"
                android:text="@string/page_blok5_q51_text"/>
            <Spinner
                style="@style/Answer"
                android:id="@+id/spQ51A"/>
            <TextView
                style="@style/LabelError"
                android:id="@+id/errorQ51A"/>

            <TextView
                style="@style/LabelQuestion"
                android:id="@+id/lblQ52"
                android:text="@string/page_blok5_q52_text"/>
            <Spinner
                style="@style/Answer"
                android:id="@+id/spQ52A"/>
            <TextView
                style="@style/LabelError"
                android:id="@+id/errorQ52A"/>

            <TextView
                style="@style/LabelQuestion"
                android:id="@+id/lblQ52B"
                android:text="@string/page_blok5_q52B_text"/>
            <Spinner
                style="@style/Answer"
                android:id="@+id/spQ52BA"/>
            <TextView
                style="@style/LabelError"
                android:id="@+id/errorQ52BA"/>

            <TextView
                style="@style/LabelQuestion"
                android:id="@+id/lblQ52C"
                android:text="@string/page_blok5_q52C_text"/>
            <Spinner
                style="@style/Answer"
                android:id="@+id/spQ52CA"/>
            <TextView
                style="@style/LabelError"
                android:id="@+id/errorQ52CA"/>

            <TextView
                style="@style/LabelQuestion"
                android:id="@+id/lblQ52D"
                android:text="@string/page_blok5_q52D_text"/>
            <Spinner
                style="@style/Answer"
                android:id="@+id/spQ52DA"/>
            <TextView
                style="@style/LabelError"
                android:id="@+id/errorQ52DA"/>

            <TextView
                style="@style/LabelQuestion"
                android:id="@+id/lblQ52E"
                android:text="@string/page_blok5_q52E_text"/>
            <Spinner
                style="@style/Answer"
                android:id="@+id/spQ52EA"/>
            <TextView
                style="@style/LabelError"
                android:id="@+id/errorQ52EA"/>

            <TextView
                style="@style/LabelQuestion"
                android:id="@+id/lblQ53"
                android:text="@string/page_blok5_q53_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ53A1"
                android:text="@string/page_checkbox_blok5_q53_a1_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ53A2"
                android:text="@string/page_checkbox_blok5_q53_a2_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ53A3"
                android:text="@string/page_checkbox_blok5_q53_a3_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ53A4"
                android:text="@string/page_checkbox_blok5_q53_a4_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ53A5"
                android:text="@string/page_checkbox_blok5_q53_a5_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ53A6"
                android:text="@string/page_checkbox_blok5_q53_a6_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ53A7"
                android:text="@string/page_checkbox_blok5_q53_a7_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ53A8"
                android:text="@string/page_checkbox_blok5_q53_a8_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ53A9"
                android:text="@string/page_checkbox_blok5_q53_a9_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ53A10"
                android:text="@string/page_checkbox_blok5_q53_a10_text"/>
            <EditText
                style="@style/Answer"
                android:id="@+id/txtQ53A"/>
            <TextView
                style="@style/LabelError"
                android:id="@+id/errorQ53A"/>

            <TextView
                style="@style/LabelQuestion"
                android:id="@+id/lblQ54"
                android:text="@string/page_blok5_q54_text"/>
            <Spinner
                style="@style/Answer"
                android:id="@+id/spQ54A"/>
            <TextView
                style="@style/LabelError"
                android:id="@+id/errorQ54A"/>

            <TextView
                style="@style/LabelQuestion"
                android:id="@+id/lblQ55"
                android:text="@string/page_blok5_q55_text"/>
            <Spinner
                style="@style/Answer"
                android:id="@+id/spQ55A"/>
            <TextView
                style="@style/LabelError"
                android:id="@+id/errorQ55A"/>

            <TextView
                style="@style/LabelQuestion"
                android:id="@+id/lblQ56"
                android:text="@string/page_blok5_q56_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ56ASmartfren"
                android:text="@string/page_checkbox_smartfren_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ56AAsus"
                android:text="@string/page_checkbox_asus_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ56ABlackberry"
                android:text="@string/page_checkbox_blackberry_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ56AEvercoss"
                android:text="@string/page_checkbox_evercoss_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ56ALenovo"
                android:text="@string/page_checkbox_lenovo_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ56AMito"
                android:text="@string/page_checkbox_mito_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ56ANokia"
                android:text="@string/page_checkbox_nokia_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ56AOppo"
                android:text="@string/page_checkbox_oppo_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ56ASamsung"
                android:text="@string/page_checkbox_samsung_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ56ASony"
                android:text="@string/page_checkbox_sony_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ56ATidakAda"
                android:text="@string/page_checkbox_tidakada_text"/>
            <CheckBox
                style="@style/Answer"
                android:id="@+id/cbQ56ALainnya"
                android:text="@string/page_checkbox_lainnya_text"/>
            <EditText
                style="@style/Answer"
                android:id="@+id/txtQ56A"/>

            <TextView
                style="@style/LabelError"
                android:id="@+id/errorQ56A"
                />
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/bottom_step_button_layout" />
</RelativeLayout>
