<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smartfren.instrat.activities.Blok10Activity"
    android:orientation="vertical"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lblQ129"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_blok10_q129_text"
                android:layout_marginBottom="10dp"/>
            <CheckBox android:id="@+id/cbQ129A1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_checkbox_blok10_produkjual_1_text"
                android:layout_marginBottom="10dp"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/cbQ129A2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_checkbox_blok10_produkjual_2_text"
                android:layout_marginBottom="10dp"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/cbQ129A3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_checkbox_blok10_produkjual_3_text"
                android:layout_marginBottom="10dp"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/cbQ129A4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_checkbox_blok10_produkjual_4_text"
                android:layout_marginBottom="10dp"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/cbQ129A5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_checkbox_blok10_produkjual_5_text"
                android:layout_marginBottom="10dp"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/cbQ129A6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_checkbox_blok10_produkjual_6_text"
                android:layout_marginBottom="10dp"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/cbQ129A7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_checkbox_blok10_produkjual_7_text"
                android:layout_marginBottom="10dp"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/cbQ129A8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_checkbox_blok10_produkjual_8_text"
                android:layout_marginBottom="10dp"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/cbQ129A9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_checkbox_blok10_produkjual_9_text"
                android:layout_marginBottom="10dp"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/cbQ129A10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_checkbox_blok10_produkjual_10_text"
                android:layout_marginBottom="10dp"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/cbQ129A11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_checkbox_blok10_produkjual_11_text"
                android:layout_marginBottom="10dp"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/cbQ129A12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_checkbox_blok10_produkjual_12_text"
                android:layout_marginBottom="10dp"
                android:onClick="onCheckboxClicked"/>

        </LinearLayout>
    </ScrollView>
    <include
        layout="@layout/bottom_step_button_layout" />
</LinearLayout>

