<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smartfren.instrat.activities.Blok3Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
    <TextView
        android:id="@+id/lblQ6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_blok3_q6_text"
        android:layout_marginBottom="10dp"/>
    <RadioGroup
        android:id="@+id/rbgQ6A"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30dp">
        <RadioButton android:id="@+id/rbQ6A1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_blok3_q6_a1_text"/>
        <RadioButton android:id="@+id/rbQ6A2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_blok3_q6_a2_text"/>
        <RadioButton android:id="@+id/rbQ6A3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_blok3_q6_a3_text"/>
    </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/bottom_step_button_layout" />
</RelativeLayout>